--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0">
   <link rel='stylesheet' href='./pages/index.css'>
+
   <title>Mesto</title>
 </head>
 <body class="root">
@@ -16,8 +17,9 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Аватар">
         <div class="profile__info">
-          <p class="profile__info_name">Жак-Ив Кусто <button class="profile__edit-button link"></button></p>
+          <h2 h2 class="profile__info_name">Жак-Ив Кусто</h2>
           <p class="profile__info_description">Исследователь океана</p>
+          <button type="button" class="profile__edit-button link"></button>
         </div>
         <button class="profile__add-button link"></button>
       </section>
@@ -63,16 +65,15 @@
             <h3 class="elements__title">Карачаевск</h3>
             <button class="elements__button-like"></button>
           </div>
-        </div>
       </section>
-      <div class="popup">
+      <div class="popup popup_hidden">
         <div class="popup__container">
-          <button class="popup__close-button"></button>
+          <button type='button' class="popup__close-button link"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <form name="form" class="popup__form">
             <input name="profile-name" class="popup__input popup__input_type_name" type="text">
             <input name="profile-job" class="popup__input popup__input_type_job" type="text">
-            <button type="submit" class="popup__save-button">Сохранить</button>
+            <button type="submit" class="popup__save-button link">Сохранить</button>
           </form>
         </div>
       </div>
@@ -81,6 +82,6 @@
       <img class="footer__logo" src="/images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
     </footer>
   </div>
-
+<script src="./script/index.js"></script>
 </body>
 </html>
