--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body class="root">
   <div class="container">
     <header class="header">
-      <img class="header__logo" src="./images/header/logo.svg" alt="Логотип Мест России">
+      <img class="header__logo" src="../images/header/logo.svg" alt="Логотип Мест России">
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Аватар">
+        <img class="profile__avatar" src="../images/profile/avatar.jpg" alt="Аватар">
         <div class="profile__info">
           <h2 h2 class="profile__info_name">Жак-Ив Кусто</h2>
           <p class="profile__info_description">Исследователь океана</p>
@@ -25,42 +25,42 @@
       </section>
       <section class="elements">
         <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Elements_Karachaevsk.jpg" alt="Карачаево">
+          <img class="elements__image" src="../images/elements/Elements_Karachaevsk.jpg" alt="Карачаево">
           <div class="elements__attributes">
-            <h3 class="elements__title">Карачаево Черкесия</h3>
+            <h3 class="elements__title">Карачаевcк</h3>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Elbrus.png" alt="Эльбрус">
-          <div class="elements__attributes">
-            <h3 class="elements__title">Гора Эльбрус</h3>
-            <button class="elements__button-like"></button>
-          </div>
-        </div>
-        <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Dombay.png" alt="Домбай">
-          <div class="elements__attributes">
-            <h3 class="elements__title">Домбай</h3>
-            <button class="elements__button-like"></button>
-          </div>
-        </div>
-        <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Elbrus.png" alt="Эльбрус">
+          <img class="elements__image" src="../images/elements/Elbrus.png" alt="Эльбрус">
           <div class="elements__attributes">
             <h3 class="elements__title">Гора Эльбрус</h3>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Dombay.png" alt="Домбай">
+          <img class="elements__image" src="../images/elements/Dombay.png" alt="Домбай">
           <div class="elements__attributes">
             <h3 class="elements__title">Домбай</h3>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
-          <img class="elements__image" src="/images/elements/Elements_Karachaevsk.jpg" alt="Карачаевск">
+          <img class="elements__image" src="../images/elements/Elbrus.png" alt="Эльбрус">
+          <div class="elements__attributes">
+            <h3 class="elements__title">Гора Эльбрус</h3>
+            <button class="elements__button-like"></button>
+          </div>
+        </div>
+        <div class="elements__item">
+          <img class="elements__image" src="../images/elements/Dombay.png" alt="Домбай">
+          <div class="elements__attributes">
+            <h3 class="elements__title">Домбай</h3>
+            <button class="elements__button-like"></button>
+          </div>
+        </div>
+        <div class="elements__item">
+          <img class="elements__image" src="../images/elements/Elements_Karachaevsk.jpg" alt="Карачаевск">
           <div class="elements__attributes">
             <h3 class="elements__title">Карачаевск</h3>
             <button class="elements__button-like"></button>
@@ -79,9 +79,9 @@
       </div>
     </main>
     <footer class="footer">
-      <img class="footer__logo" src="/images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
+      <img class="footer__logo" src="../images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
     </footer>
   </div>
-<script src="./script/index.js"></script>
+<script src="../script/index.js"></script>
 </body>
 </html>
