--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       </div>
     </main>
     <footer class="footer">
-      <img class="footer__logo" src="../images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
+      <img class="footer__logo" src="./images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
     </footer>
   </div>
-<script src="../script/index.js"></script>
+<script src="./script/index.js"></script>
 </body>
 </html>
