--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Аватар">
         <div class="profile__info">
-          <h2 h2 class="profile__info_name">Жак-Ив Кусто</h2>
+          <h1 class="profile__info_name">Жак-Ив Кусто</h1>
           <p class="profile__info_description">Исследователь океана</p>
           <button type="button" class="profile__edit-button link"></button>
         </div>
@@ -27,42 +27,42 @@
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Karachaevsk.png" alt="Карачаево">
           <div class="elements__attributes">
-            <h3 class="elements__title">Карачаевcк</h3>
+            <h2 class="elements__title">Карачаевcк</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Elbrus.png" alt="Эльбрус">
           <div class="elements__attributes">
-            <h3 class="elements__title">Гора Эльбрус</h3>
+            <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Dombay.png" alt="Домбай">
           <div class="elements__attributes">
-            <h3 class="elements__title">Домбай</h3>
+            <h2 class="elements__title">Домбай</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Elbrus.png" alt="Эльбрус">
           <div class="elements__attributes">
-            <h3 class="elements__title">Гора Эльбрус</h3>
+            <h2 class="elements__title">Гора Эльбрус</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Dombay.png" alt="Домбай">
           <div class="elements__attributes">
-            <h3 class="elements__title">Домбай</h3>
+            <h2 class="elements__title">Домбай</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
         <div class="elements__item">
           <img class="elements__image" src="./images/elements/Karachaevsk.png" alt="Карачаевск">
           <div class="elements__attributes">
-            <h3 class="elements__title">Карачаевск</h3>
+            <h2 class="elements__title">Карачаевск</h2>
             <button class="elements__button-like"></button>
           </div>
         </div>
@@ -80,7 +80,7 @@
       </div>
     </main>
     <footer class="footer">
-      <img class="footer__logo" src="./images/footer/© 2020 Mesto Russia.svg" alt="Логотип Место">
+      <img class="footer__logo" src="./images/footer/footer-Mesto-Russia.svg" alt="Логотип Место">
     </footer>
   </div>
 <script src="./script/index.js"></script>
