--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Аватар">
         <div class="profile__info">
-          <h1 class="profile__info_name">Жак-Ив Кусто</h1>
-          <p class="profile__info_description">Исследователь океана</p>
+          <h1 class="profile__info_type-name">Жак-Ив Кусто</h1>
+          <p class="profile__info_type-description">Исследователь океана</p>
           <button type="button" class="profile__edit-button link"></button>
         </div>
         <button class="profile__add-button link"></button>
