--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form name="form" class="popup__form">
             <input name="profile-name" class="popup__input popup__input_type_name" type="text"
-              placeholder="Введите имя">
+              placeholder="Введите имя" value="Жак-Ив Кусто">
             <input name="profile-job" class="popup__input popup__input_type_job" type="text"
-              placeholder="Введите профессию">
+              placeholder="Введите профессию" value="Исследователь океана">
             <button type="submit" class="popup__save-button link">Сохранить</button>
           </form>
         </div>
