--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__description">Исследователь океана</p>
-          <button type="button" class="profile__edit-button link"></button>
+          <button type="button" class="profile__edit-button button"></button>
         </div>
-        <button class="profile__add-button link"></button>
+        <button type="button" class="profile__add-button button"></button>
       </section>
       <section class="elements">
         <article class="elements__item">
@@ -71,14 +71,14 @@
       </section>
       <div class="popup popup_hidden">
         <div class="popup__container">
-          <button type='button' class="popup__close-button link"></button>
+          <button type='button' class="popup__close-button button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
           <form name="form" class="popup__form">
             <input name="profile-name" class="popup__input popup__input_type_name" type="text"
-              placeholder="Введите имя" value="Жак-Ив Кусто">
+              placeholder="Введите имя" >
             <input name="profile-job" class="popup__input popup__input_type_job" type="text"
-              placeholder="Введите профессию" value="Исследователь океана">
-            <button type="submit" class="popup__save-button link">Сохранить</button>
+              placeholder="Введите профессию" >
+            <button type="submit" class="popup__save-button button">Сохранить</button>
           </form>
         </div>
       </div>
