--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <img class="header__logo" src="./images/header/logo.svg" alt="Логотип Мест России">
     </header>
     <main class="content">
+      <!-- profile -->
       <section class="profile">
         <img class="profile__avatar" src="./images/profile/avatar.jpg" alt="Аватар">
         <div class="profile__info">
@@ -25,51 +26,18 @@
         </div>
         <button type="button" class="profile__add-button button"></button>
       </section>
+      <!-- элементы -->
       <section class="elements">
-        <article class="elements__item">
+        <!-- <article class="elements__item">
           <img class="elements__image" src="./images/elements/Karachaevsk.png" alt="Карачаево">
           <div class="elements__attributes">
             <h2 class="elements__title">Карачаевcк</h2>
             <button type="button" class="elements__button-like"></button>
           </div>
-        </article>
-        <article class="elements__item">
-          <img class="elements__image" src="./images/elements/Elbrus.png" alt="Эльбрус">
-          <div class="elements__attributes">
-            <h2 class="elements__title">Гора Эльбрус</h2>
-            <button type="button" class="elements__button-like"></button>
-          </div>
-        </article>
-        <article class="elements__item">
-          <img class="elements__image" src="./images/elements/Dombay.png" alt="Домбай">
-          <div class="elements__attributes">
-            <h2 class="elements__title">Домбай</h2>
-            <button type="button" class="elements__button-like"></button>
-          </div>
-        </article>
-        <article class="elements__item">
-          <img class="elements__image" src="./images/elements/Elbrus.png" alt="Эльбрус">
-          <div class="elements__attributes">
-            <h2 class="elements__title">Гора Эльбрус</h2>
-            <button type="button" class="elements__button-like"></button>
-          </div>
-        </article>
-        <article class="elements__item">
-          <img class="elements__image" src="./images/elements/Dombay.png" alt="Домбай">
-          <div class="elements__attributes">
-            <h2 class="elements__title">Домбай</h2>
-            <button type="button" class="elements__button-like"></button>
-          </div>
-        </article>
-        <article class="elements__item">
-          <img class="elements__image" src="./images/elements/Karachaevsk.png" alt="Карачаевск">
-          <div class="elements__attributes">
-            <h2 class="elements__title">Карачаевск</h2>
-            <button type="button" class="elements__button-like"></button>
-          </div>
-        </article>
+        </article> -->
       </section>
-      <div class="popup popup_hidden">
+      <!-- Попап изменения профиля -->
+      <div class="popup popup_type_edit">
         <div class="popup__container">
           <button type='button' class="popup__close-button button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -82,11 +50,43 @@
           </form>
         </div>
       </div>
+      <!-- Попап добавления карточек -->
+      <div class="popup popup_type_add">
+        <div class="popup__container">
+          <button type='button' class="popup__close-button button"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form name="form" class="popup__form">
+            <input name="element-place" class="popup__input popup__input_type_place" type="text"
+              placeholder="Название" >
+            <input name="element-src" class="popup__input popup__input_type_src" type="text"
+              placeholder="Ссылка на картинку" >
+            <button type="submit" class="popup__save-button profile__save-button_add-card button">Сохранить</button>
+          </form>
+        </div>
+      </div>
+      <!-- Попап картинки -->
+      <div class="popup popup_type_image">
+        <div class="popup__container">
+          <button class="popup__close-button button" type="button" value="exit"></button>
+          <img src="./images/no-image.jpg" alt="Новая картинка" class="popup__image">
+          <h2 class="popup__subtitle"></h2>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2022 Mesto Russia</p>
     </footer>
   </div>
+  <template id="card-template">
+    <article class="elements__item">
+      <button type="button" class="elements__trash button" value="trash"></button>
+      <img src="./images/no-image.jpg" alt="Новая картинка" class="elements__image"/>
+      <div class="elements__attributes">
+        <h2 class="elements__title"></h2>
+        <button type="button" class="elements__button-like" value="like"></button>
+      </div>
+    </article>
+  </template>
   <script src="./script/index.js"></script>
 </body>
 
