--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- Попап картинки -->
       <div class="popup popup_type_image">
         <div class="popup__container">
-          <img src="" alt="Новая картинка" class="popup__image">
+          <img src="./images/no-image.jpg" alt="Новая картинка" class="popup__image">
           <h2 class="popup__subtitle"></h2>
           <button class="popup__close-button button" type="button" value="exit"></button>
         </div>
@@ -73,7 +73,7 @@
   <template id="card-template">
     <article class="elements__item">
       <button type="button" class="elements__trash button" value="trash"></button>
-      <img src="" alt="Новая картинка" class="elements__image"/>
+      <img src="./images/no-image.jpg" alt="Новая картинка" class="elements__image"/>
       <div class="elements__attributes">
         <h2 class="elements__title"></h2>
         <button type="button" class="elements__button-like" value="like"></button>
