После 1 ревью, осталось открытие попапа.

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </div>
     </article>
   </template>
+  <script src="./script/cards.js"></script>
   <script src="./script/index.js"></script>
 </body>
 
