--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
       <!-- Попап изменения профиля -->
       <div class="popup popup_type_edit">
         <div class="popup__container">
-          <form name="form" class="popup__form">
+          <form name="profile" class="popup__form" novalidate>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input name="profile-name" class="popup__input popup__input_type_name" type="text"
-              placeholder="Введите имя" >
-            <input name="profile-job" class="popup__input popup__input_type_job" type="text"
-              placeholder="Введите профессию" >
+            <input name="profile-name" id="profile-name" class="popup__input popup__input_type_name" type="text"
+              placeholder="Введите имя" minlength="2" maxlength="40" required>
+              <span id="profile-name-error" class="popup__error popup__input_type_name-error"></span>
+            <input name="profile-job" id="profile-job" class="popup__input popup__input_type_job" type="text"
+              placeholder="Введите профессию" minlength="2" maxlength="200" required>
+              <span id="profile-job-error" class="popup__error popup__input_type_job-error"></span>
             <button type="submit" class="popup__save-button button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
@@ -46,12 +48,14 @@
       <!-- Попап добавления карточек -->
       <div class="popup popup_type_add">
         <div class="popup__container">
-          <form name="form" class="popup__form">
+          <form name="place" class="popup__form" novalidate>
             <h2 class="popup__title">Новое место</h2>
-            <input name="element-place" class="popup__input popup__input_type_place" type="text"
-              placeholder="Название" >
-            <input name="element-src" class="popup__input popup__input_type_src" type="text"
-              placeholder="Ссылка на картинку" >
+            <input name="element-place" id="element-place" class="popup__input popup__input_type_place" type="text"
+              placeholder="Название" minlength="2" maxlength="30" required>
+            <span id="element-place-error" class="popup__error popup__input_type_place-error"></span>
+            <input name="element-src" id="element-src" class="popup__input popup__input_type_src" type="url"
+              placeholder="Ссылка на картинку" required>
+            <span id="profile-job-error" class="popup__error popup__input_type_src-error"></span>
             <button type="submit" class="popup__save-button popup__save-button_add-card button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
@@ -82,6 +86,7 @@
   </template>
   <script src="./script/cards.js"></script>
   <script src="./script/index.js"></script>
+  <script src="./script/validate.js"></script>
 </body>
 
 </html>
