--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span id="element-place-error" class="popup__error popup__input_type_place-error"></span>
             <input name="element-src" id="element-src" class="popup__input popup__input_type_src" type="url"
               placeholder="Ссылка на картинку" required>
-            <span id="profile-job-error" class="popup__error popup__input_type_src-error"></span>
+            <span id="element-src-error" class="popup__error popup__input_type_src-error"></span>
             <button type="submit" class="popup__save-button popup__save-button_add-card button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
@@ -85,8 +85,8 @@
     </article>
   </template>
   <script src="./script/cards.js"></script>
-  <script src="./script/index.js"></script>
   <script src="./script/validate.js"></script>
+  <script src="./script/index.js"></script>
 </body>
 
 </html>
