--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <input name="profile-name" id="profile-name" class="popup__input popup__input_type_name" type="text"
               placeholder="Введите имя" minlength="2" maxlength="40" required>
-              <span id="profile-name-error" class="popup__error popup__input_type_name-error"></span>
+              <span id="profile-name-error" class="popup__error"></span>
             <input name="profile-job" id="profile-job" class="popup__input popup__input_type_job" type="text"
               placeholder="Введите профессию" minlength="2" maxlength="200" required>
-              <span id="profile-job-error" class="popup__error popup__input_type_job-error"></span>
+              <span id="profile-job-error" class="popup__error"></span>
             <button type="submit" class="popup__save-button button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
@@ -52,10 +52,10 @@
             <h2 class="popup__title">Новое место</h2>
             <input name="element-place" id="element-place" class="popup__input popup__input_type_place" type="text"
               placeholder="Название" minlength="2" maxlength="30" required>
-            <span id="element-place-error" class="popup__error popup__input_type_place-error"></span>
+            <span id="element-place-error" class="popup__error"></span>
             <input name="element-src" id="element-src" class="popup__input popup__input_type_src" type="url"
               placeholder="Ссылка на картинку" required>
-            <span id="element-src-error" class="popup__error popup__input_type_src-error"></span>
+            <span id="element-src-error" class="popup__error"></span>
             <button type="submit" class="popup__save-button popup__save-button_add-card button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
