Готовый класс Card + отрисовка.

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
       </div>
     </article>
   </template>
-  <script src="./script/cards.js"></script>
-  <script src="./script/validate.js"></script>
-  <script src="./script/index.js"></script>
+  <script type='module' src="./script/Card.js" defer></script>
+  <script type='module' src="./script/utils.js" defer></script>
+  <!-- <script type='module' src="./script/FormValidator.js"></script> -->
+  <script type='module' src="./script/index.js" defer></script>
+  <script type='module' src="./script/initialCards.js" defer></script>
 </body>
 
 </html>
