--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       </div>
     </article>
   </template>
-  <script type='module' src="./script/Card.js" defer></script>
-  <script type='module' src="./script/utils.js" defer></script>
+  <script type='module' src="./script/Card.js"></script>
+  <script type='module' src="./script/utils.js"></script>
   <!-- <script type='module' src="./script/FormValidator.js"></script> -->
-  <script type='module' src="./script/index.js" defer></script>
-  <script type='module' src="./script/initialCards.js" defer></script>
+  <script type='module' src="./script/index.js"></script>
+  <script type='module' src="./script/initialCards.js"></script>
 </body>
 
 </html>
