--- a/index.html
+++ b/index.html
@@ -84,11 +84,12 @@
       </div>
     </article>
   </template>
-  <script type='module' src="./script/Card.js"></script>
-  <script type='module' src="./script/utils.js"></script>
-  <!-- <script type='module' src="./script/FormValidator.js"></script> -->
-  <script type='module' src="./script/index.js"></script>
+
   <script type='module' src="./script/initialCards.js"></script>
+  <script type='module' src="./script/utils.js"></script>
+  <script type='module' src="./script/Card.js"></script>
+  <script type='module' src="./script/FormValidator.js"></script>
+  <script type='module' src="./script/index.js"></script>
 </body>
 
 </html>
