--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,17 @@
           <button class="popup__close-button button" type="button" value="exit"></button>
         </div>
       </div>
+      <!--Попап подтверждения удаления-->
+      <div class="popup popup_type_confirm">
+        <div class="popup__container">
+          <form class="popup__form" name="confirm" novalidate>
+            <h2 class="popup__title popup__title_confirm">Вы уверены?</h2>
+            <button type="submit" class="popup__save-button popup__save-button_confirm button" >Да</button>
+          </form>
+
+          <button type='button' class="popup__close-button button"></button>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2022 Mesto Russia</p>
