--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,33 @@
     <main class="content">
       <!-- profile -->
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./images/profile/avatar.jpg')%>" alt="Аватар">
-        <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__description">Исследователь океана</p>
-          <button type="button" class="profile__edit-button button"></button>
-        </div>
+          <div class='profile__card'>
+            <img class="profile__avatar" src="<%=require('./images/profile/avatar.jpg')%>" alt="Аватар">
+            <button type='button' class="button profile__avatar-button"></button>
+          </div>
+          <div class="profile__info">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <p class="profile__description">Исследователь океана</p>
+            <button type="button" class="profile__edit-button button"></button>
+          </div>
         <button type="button" class="profile__add-button button"></button>
       </section>
       <!-- элементы -->
       <section class="elements">
       </section>
+      <!--Попап изменения аватара-->
+      <div class="popup popup_type_avatar">
+        <div class="popup__container">
+          <form name="avatar" class="popup__form" novalidate>
+            <h2 class="popup__title">Обновить аватар</h2>
+            <input name="profile-avatar" id="profile-avatar" class="popup__input popup__input_type_src" type="url"
+              placeholder="Ссылка на аватар" required>
+            <span id="profile-src-error" class="popup__error"></span>
+            <button type="submit" class="popup__save-button button">Сохранить</button>
+            <button type='button' class="popup__close-button button"></button>
+          </form>
+        </div>
+      </div>
       <!-- Попап изменения профиля -->
       <div class="popup popup_type_edit">
         <div class="popup__container">
@@ -90,7 +106,10 @@
       <img src="./images/no-image.jpg" alt="Новая картинка" class="elements__image"/>
       <div class="elements__attributes">
         <h2 class="elements__title"></h2>
-        <button type="button" class="elements__button-like" value="like"></button>
+        <div class="elements__like-container">
+          <button type="button" class="elements__button-like" value="like"></button>
+          <span class="elements__like-counter"></span>
+        </div>
       </div>
     </article>
   </template>
