--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,9 @@
         <div class="popup__container">
           <form name="avatar" class="popup__form" novalidate>
             <h2 class="popup__title">Обновить аватар</h2>
-            <input name="profile-avatar" id="profile-avatar" class="popup__input popup__input_type_src" type="url"
+            <input name="profile-avatar" id="profile-avatar" class="popup__input popup__input_type_avatar" type="url"
               placeholder="Ссылка на аватар" required>
-            <span id="profile-src-error" class="popup__error"></span>
+            <span id="profile-avatar-error" class="popup__error"></span>
             <button type="submit" class="popup__save-button button">Сохранить</button>
             <button type='button' class="popup__close-button button"></button>
           </form>
